--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"typescript-plugin-toml": "^0.3.2",
+		"vite": "^5.0.3",
+		"vite-plugin-toml": "^0.7.0"
+	},
+	"dependencies": {
+		"@ltd/j-toml": "^1.38.0"
 	},
 	"type": "module"
 }
